First commit of the profile module

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "zf2",
     "shineisp"
   ],
-  "homepage": "http://github.com/shineisp/Base",
+  "homepage": "http://github.com/shineisp/Profile",
   "authors": [
     {
       "name": "Michelangelo Turillo",
